fix(home-page): card grid gap

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -6,13 +6,11 @@
   margin: 0 16px;
   max-width: 1200px;
 }
-.card-container {
-  width: 100vw;
-}
 .filters {
   margin: 3em 0 2em 0;
 }
 
-mat-grid-list {
-  height: 400px;
+.card-grid-item {
+  @media screen and (max-width: 400px) {
+  }
 }
